# iSIM

./: .gitignore  README.md
control/: README.md  main.ps1  main.py  pubsub.py  pyproject.toml  settings.py  settings_translate.py
control/doc/: iSIMSettings.md  output_comms.md  structure.md  strucutre_overview.md
control/gui/: main_window.py  mda.py
control/ni/: acquisition.py  devices.py  sequences.py
control/src/isim_control/: core.py  mp_pubsub.py  pubsub.py  run.py  runner.py  settings.py  settings_translate.py
control/src/isim_control/eda/: basic.py  eda.py  gui.py
control/src/isim_control/eda/_stack_viewer/: _channel_row.py  _datastore.py  _stack_viewer.py
control/src/isim_control/eda/_util/: _5d_writer_base.py  _channel_row.py  _labeled_slider.py  zarr_saver.py
control/src/isim_control/gui/: _stack_viewer.py  dark_theme.py  main_window.py  mda.py  output.py  position_history.py  preview.py  save_button.py  simple_mda.py
control/src/isim_control/gui/assets/: _hist.py  qt_classes.py  save_button.py
control/src/isim_control/io/: buffered_datastore.py  datastore.py  keyboard.py  kpal.py  monogram.py  ome_metadata.py  ome_tiff_writer.py  remote_datastore.py
control/src/isim_control/ni/: acquisition.py  devices.py  live.py
control/src/isim_control/ni/testing/: MMConfig_demo.cfg  img_histogram.py  mda_listeners.py  pymmcore_widgets_error.py  test_stack_viewer.py  triggered_camera.py
control/testing/: grid_plan_check.py  pubsub_multiprocess.py  zarr_multiprocess.py
deconvolution/: cuda_decon.py  prepare.py  requirements.txt  script.py  (+1 more)
(+13 files in other folders)
