[project]
name = "isim_control"
description = "Control for the iSIM microscope at LEB"
version = "0.0.2"
authors = [
    { name = "Willi Stepp", email = "willi.stepp@epfl.ch" }
]

dependencies = [
    'pymmcore-plus',
    'pymmcore-widgets',
    'superqt[cmap]',
    'scipy',
    'vispy',
    'pygame'
]

[project.optional-dependencies]
display = [ 'vispy' ]

[tool.coverage.run]
source = ['isim_control']
