[project]
name = "isim_control"
description = "Control for the iSIM microscope at LEB"
version = "0.0.2"
authors = [
    { name = "Willi Stepp", email = "willi.stepp@epfl.ch" }
]

dependencies = [
    'pymmcore-plus[io]',
    'pymmcore-widgets[pyqt6]',
    'superqt[cmap]',
    'scipy',
    'pygame',
    'pyyaml',
    'nidaqmx',
    'ome-types',
    'fonticon-materialdesignicons6',
    'vispy',
    "pymmcore-eda",
]

[project.optional-dependencies]
display = [ 'vispy' ]
qt = ['pyqt6']
full = [ 'vispy', 'pyqt6']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ['isim_control']

[tool.uv.sources]
pymmcore-eda = { path = "../../pymmcore-eda", editable = true }
